--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,18 +23,22 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Format
+        working-directory: tfe
         id: fmt
         run: terraform fmt -check
 
       - name: Terraform Init
+        working-directory: tfe
         id: init
         run: terraform init
       
       - name: Terraform Validate
+        working-directory: tfe
         id: validate
         run: terraform validate -no-color
 
       - name: Terraform Plan
+        working-directory: tfe
         id: plan
         if: github.event_name == 'pull_request'
         run: terraform plan -no-color
@@ -71,8 +75,10 @@ jobs:
 
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
+        working-directory: tfe
         run: exit 1
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        working-directory: tfe
         run: terraform apply -auto-approve
