--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,9 +15,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        working-directory: tfe
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
+        working-directory: tfe
         with:
           # terraform_version: 0.13.0:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
