--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - stage
+      - master
   pull_request:
     branches:
       - stage
+      - master
 
 jobs:
   terraform:
