--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         working-directory: tfe
         with:
-          terraform_version: 1.0.7:
+          terraform_version: 1.0.7
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Format
